# lotsman

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  Makefile  README.md  SECURITY.md  conftest.py  importlinter.ini  osv-scanner.toml  pyproject.toml
services/audit-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/audit-service/alembic/: env.py  script.py.mako
services/audit-service/alembic/versions/: 0001_initial_audit_schema.py
services/audit-service/src/audit_service/: __init__.py  config.py  main.py
services/audit-service/src/audit_service/api/: deps.py  errors.py
services/audit-service/src/audit_service/application/: ports.py
services/audit-service/src/audit_service/db/: models.py
services/audit-service/src/audit_service/domain/: errors.py
services/audit-service/tests/: conftest.py
services/audit-service/tests/unit/: test_app_factory.py  test_config.py
services/auth-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_initial_auth_schema.py  0002_seed_system_actors.py  0003_add_totp_used_codes.py  0004_add_backup_codes.py  0005_lockout_partial_index.py  0006_super_admin_role.py  0007_key_rotations.py  0008_add_user_saved_filters.py  0009_add_user_ui_font_scale.py
services/auth-service/src/auth_service/: __init__.py  config.py  main.py
services/auth-service/src/auth_service/api/: deps.py  errors.py  schemas.py
services/auth-service/src/auth_service/application/: dto.py  ports.py
services/auth-service/src/auth_service/db/: models.py
services/auth-service/src/auth_service/domain/: entities.py  errors.py  events.py  value_objects.py
services/auth-service/src/auth_service/infrastructure/: arq_tasks.py  breached_passwords.py  channel_directory_http.py  clock.py  jwt_issuer.py  notification_email_adapter.py  password.py  totp.py  totp_crypto.py
services/auth-service/src/auth_service/scripts/: bootstrap_admin.py  bootstrap_super_admin.py
services/auth-service/tests/: conftest.py
services/auth-service/tests/contract/: test_openapi_conformance.py
services/auth-service/tests/integration/: conftest.py  test_bootstrap_admin.py  test_bootstrap_super_admin.py  test_internal_jwt_keys.py  test_redis_replay_cache.py  test_refresh_flow.py
services/auth-service/tests/unit/: test_app_factory.py  test_config.py
services/auth-service/tests/unit/domain/: test_value_objects.py
services/auth-service/tests/unit/policies/: __init__.py  test_lockout_policy.py  test_password_policy.py
services/auth-service/tests/unit/use_cases/: conftest.py  test_adr0008_security_gate.py  test_change_password.py  test_change_role.py  test_check_lockout.py  test_create_user.py  (+29 more)
services/notification-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/notification-service/alembic/: env.py
services/notification-service/alembic/versions/: 0001_initial_notification_schema.py  0002_provider_credentials.py  0003_exchange_calendar_channel.py  0004_calendar_subscription_share_status.py  0005_ics_subscription_token.py  0006_user_notification_prefs.py  0007_event_notifications.py  0008_notification_dedup_key.py  0009_richer_email_templates.py  0010_company_in_reminder_subject.py
services/notification-service/src/notification_service/: __init__.py  config.py  main.py
services/notification-service/tests/: conftest.py
services/notification-service/tests/integration/: test_registry_consumer.py
services/notification-service/tests/unit/: test_app_factory.py  test_calendar_subscription_share.py  test_channel_configs.py  test_channel_crypto.py  test_config.py  test_disable_channel.py  test_document_events.py  test_email_html.py  test_event_notifier.py  test_ews_driver.py  test_ews_share.py  test_get_channel_config.py  test_get_channels.py  test_humanize.py  test_ics_feed_render.py  test_internal_email.py  test_notification_prefs.py  test_schedule_fanout.py  test_set_channel_config.py  test_sync_calendar_event.py  test_templating.py
services/registry-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/registry-service/alembic/: env.py
services/registry-service/alembic/versions/: 0001_initial_registry_schema.py  0002_attachment_mime_allowlist.py  0003_export_jobs_expires_at_default.py  0004_inn_check.py  0005_custom_fields.py  0006_tenant_preferences.py  0007_add_filter_indexes.py  0008_add_asset_status.py
services/registry-service/src/registry_service/: __init__.py  config.py  main.py
services/registry-service/tests/: conftest.py
services/registry-service/tests/contract/: test_openapi_conformance.py
services/registry-service/tests/integration/: conftest.py  test_assets_crud.py  test_attachments.py  test_documents_crud.py  test_exports.py  test_history.py
services/registry-service/tests/unit/: test_app_factory.py  test_asset_inn_optional.py  test_config.py  test_import_session_codec.py
services/system-control/: Dockerfile  README.md  pyproject.toml
services/system-control/src/system_control/: __init__.py  auth.py  config.py  main.py
services/system-control/tests/: test_app_factory.py  test_auth.py  test_whitelist.py
services/web-bff/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/web-bff/src/web_bff/: __init__.py  config.py  main.py
services/web-bff/tests/: conftest.py
services/web-bff/tests/integration/: test_admin_channels_proxy.py  test_auth_proxy.py  test_registry_proxy.py
services/web-bff/tests/unit/: test_adr0008_enrollment_lane.py  test_app_factory.py  test_config.py  test_fn1_password_change_lane.py  test_inbound_header_sanitiser.py  test_jwt_fail_closed.py  test_refresh_coalescing.py
shared/: pyproject.toml
shared/src/lotsman_shared/: __init__.py  actors.py  envelope.py  errors.py  health.py  internal_jwt.py  logging.py  metrics.py  middleware.py
shared/tests/: __init__.py  test_actors.py  test_envelope.py  test_internal_jwt.py  test_logging.py
(+484 files in other folders)
