[project]
name = "lotsman-shared"
version = "0.1.0"
license = "BUSL-1.1"
description = "Lotsman shared kernel — event envelope, internal JWT, system actors, logging, middleware"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pyjwt>=2.8,<3",
    "structlog>=24.1,<25",
    "prometheus-client>=0.20,<1",
    "fastapi>=0.115,<1",
    "starlette>=0.41,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lotsman_shared"]

[tool.hatch.build.targets.wheel.shared-data]
"src/lotsman_shared/py.typed" = "lotsman_shared/py.typed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
