[project]
name = "audit-service"
version = "0.1.0"
license = "BUSL-1.1"
description = "Lotsman audit-service — append-only event log, monthly partitions"
requires-python = ">=3.12"
dependencies = [
    "lotsman-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.29,<1",
    "alembic>=1.13,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
    "arq>=0.25",
    "tenacity>=8.2,<9",
    "structlog>=24.1,<25",
    "prometheus-client>=0.20,<1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "freezegun>=1.4",
    "testcontainers[postgres]>=4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.sources]
lotsman-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/audit_service/db/models.py" = ["E501", "UP045", "F401"]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
